# mev-watch

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/mev_watch/: __init__.py  abi.py  config.py  constants.py  db.py  logging.py  rpc.py  utils.py
backend/mev_watch/api/: __main__.py  app.py  queries.py  routes.py  schemas.py
backend/mev_watch/detector/: __main__.py  economics.py  jit.py  runner.py  sandwich.py  types.py
backend/mev_watch/ingester/: __main__.py  backfill.py  decoding.py  listener.py  prices.py  reference.py  worker.py
db/: init.sql
deploy/: DEPLOY.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/v1/: _shared.ts
frontend/app/api/v1/events/: route.ts
frontend/app/api/v1/events/[id]/: route.ts
frontend/app/api/v1/events/stream/: route.ts
frontend/app/api/v1/leaderboard/: route.ts
frontend/app/api/v1/stats/: route.ts
frontend/app/docs/: page.tsx
frontend/components/: About.tsx  BlockBar.tsx  EventModal.tsx  KpiCards.tsx  Leaderboard.tsx  LiveFeed.tsx  PeriodToggle.tsx  ProfitChart.tsx
frontend/components/ui/: Badge.tsx  Card.tsx
frontend/lib/: api.ts  demo-data.ts  format.ts  types.ts
