[project]
name = "mev-watch"
version = "0.1.0"
description = "Real-time MEV detection on Ethereum (sandwich, JIT)"
requires-python = ">=3.12"
dependencies = [
    "web3>=7.0",
    "asyncpg>=0.29",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "eth-abi>=5.0",
    "eth-utils>=4.1",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mev_watch*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
